// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders with defined green level 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="_quality_indicator_4287c4"
        >
          <div
            class="_quality_indicator_name_4287c4"
          >
            <h1>
              HbA1c &lt; 7,0 %
            </h1>
          </div>
          <div
            class="_qi_long_description_4287c4"
          >
            <p>
              Andel pasienter med HbA1c &lt; 7,0 %
            </p>
          </div>
          <div
            class="_desired_target_level_4287c4"
          >
            <h4>
              ØNSKET MÅLNIVÅ: 
              ≥
               
              40 %
            </h4>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders with non-complete year 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="_quality_indicator_4287c4"
        >
          <div
            class="_quality_indicator_name_4287c4"
          >
            <h1>
              HbA1c &lt; 7,0 %
            </h1>
          </div>
          <div
            class="_qi_long_description_4287c4"
          >
            <p>
              Andel pasienter med HbA1c &lt; 7,0 %
            </p>
          </div>
          <div
            class="_desired_target_level_4287c4"
          >
            <h4>
              ØNSKET MÅLNIVÅ: 
              ≥
               
              40 %
            </h4>
          </div>
          <div
            class="_not_complete_year_4287c4"
          >
            <h4>
              Data er komplett til og med 
              10. mars 1979
              . Siste komplette år er 
              1979
              .
            </h4>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders without defined green level 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="_quality_indicator_4287c4"
        >
          <div
            class="_quality_indicator_name_4287c4"
          >
            <h1>
              HbA1c ≥ 9,0 %
            </h1>
          </div>
          <div
            class="_qi_long_description_4287c4"
          >
            <p>
              Andel pasienter med HbA1c &gt; 9,0
            </p>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
